<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cor_fundo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.furb.seca.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Procurar componente"
        android:inputType="date" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dia_inteiro" />

    <TextView
        android:id="@+id/txtLembretes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lembretes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtTempoLemprete"
            android:layout_width="91dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <Spinner
            android:id="@+id/cboUnidadeTempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            style="@android:attr/buttonBarButtonStyle"
            android:id="@+id/btnGravar"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:text="@string/gravar" />

        <Button
            style="@android:attr/buttonBarButtonStyle"
            android:id="@+id/btnExcluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/excluir" />
    </LinearLayout>

</LinearLayout>